Version 2.7.0: ??/??/??
	* Added German translation (see AUTHORS for credits).
	* Added capsnot plugin (Eion Robb)
	* Added icon-override plugin (Eion Robb)
	* Added translate plugin (Eion Robb)
	* Fix a use-after-free in IRC Helper.
	* IRC Helper delays autojoins until after identifying with Purple 2.7.0 or
	  newer.
	* Support new Freenode IDENTIFY syntax in IRC Helper so users can log into
	  services even when using an alternate or new nick.
	* IRC Helper now properly supports and suppresses new Freenode welcome and
	  identified messages.
	* Updated website string to reflect project move from Trac to Redmine
	* Changed package name from purple-plugin_pack to purple-plugin-pack.
	* The Album plugin should no longer crash on non-buddies.

Version 2.6.3: 03/28/10
	* Add support for Spidernet to IRC Helper plugin.
	* IRC Helper now supports suppressing messages from the Freenode bot
	  frigg.
	* IRC-More now builds when you pass --with-plugins=irc-more to configure.
	  (Ivan Ponomarev)
	* IRC-More no longer tries to set umodes on connect if none are specified.
	* IRC-More now provides a channel autojoin list.  Autojoins happen with a
	  6-second delay to allow IRC Helper to do its job first.

Version 2.6.2: 01/01/10
	* Fix IRC More plugin not properly rejoining channels.
	* IRC More no longer has a preference for auto rejoin delay--default to
	  100 milliseconds.
	* Splitter plugin now connects to signals with
	  PURPLE_SIGNAL_PRIORITY_HIGHEST, which makes it process messages last.
	* Splitter will not touch any messages generated by the OTR plugin,
	  resolving compatibility issues.
	* Splitter now resubmits split messages through the normal message
	  handling mechanisms in libpurple and tracks those resubmissions, meaning
	  splitting of messages will no longer bypass any other plugins
	  intercepting outgoing messages.
	* /exec's author list no longer makes the Pidgin plugins dialog wider.