@@ -83,10 +83,19 @@ void okc_got_info(OkCupidAccount *oca, gchar *data,
 		purple_notify_userinfo(oca->pc, username, user_info, NULL, NULL);
 		purple_notify_user_info_destroy(user_info);
 		g_free(username);
-		return;	
+		return;
 	}
 	root = json_parser_get_root(parser);
 	info = json_node_get_object(root);
+	
+	if (json_object_get_member(info, "error"))
+	{
+		purple_debug_error("okcupid", "got_info error\n");
+		purple_notify_userinfo(oca->pc, username, user_info, NULL, NULL);
+		purple_notify_user_info_destroy(user_info);
+		g_free(username);
+		return;
+	}
 	
 	value_tmp = g_strdup_printf("%" G_GINT64_FORMAT " years", json_node_get_int(json_object_get_member(info, "age")));
 	purple_notify_user_info_add_pair(user_info, _("Age"), value_tmp);
@@ -107,37 +116,43 @@ void okc_got_info(OkCupidAccount *oca, gchar *data,
 	
 	const gchar *buddy_icon = json_node_get_string(json_object_get_member(info, "thumbnail"));
 	PurpleBuddy *buddy = purple_find_buddy(oca->account, username);
-	OkCupidBuddy *obuddy = buddy->proto_data;
-	if (obuddy == NULL)
+	if (buddy != NULL)
 	{
-		obuddy = g_new0(OkCupidBuddy, 1);
-		obuddy->buddy = buddy;
-		obuddy->oca = oca;
-		
-		// load the old buddy icon url from the icon 'checksum'
-		const gchar *buddy_icon_url = purple_buddy_icons_get_checksum_for_user(buddy);
-		if (buddy_icon_url != NULL)
-			obuddy->thumb_url = g_strdup(buddy_icon_url);
-		
-		buddy->proto_data = obuddy;			
-	}	
-	if (!obuddy->thumb_url || !g_str_equal(obuddy->thumb_url, buddy_icon))
-	{
-		gchar *host, *path, *path2;
-		
-		g_free(obuddy->thumb_url);
-		obuddy->thumb_url = purple_strreplace(buddy_icon, "/60x60/", "/256x256/");
-		
-		purple_url_parse(obuddy->thumb_url, &host, NULL, &path, NULL, NULL);
-		if (path[0] != '/')
-			path2 = g_strdup_printf("/%s", path);
-		else
-			path2 = g_strdup(path);
-		okc_post_or_get(oca, OKC_METHOD_GET, host, path2, NULL, okc_buddy_icon_cb, g_strdup(username), FALSE);
-		
-		g_free(host);
-		g_free(path);
-		g_free(path2);
+		OkCupidBuddy *obuddy = buddy->proto_data;
+		if (obuddy == NULL)
+		{
+			obuddy = g_new0(OkCupidBuddy, 1);
+			obuddy->buddy = buddy;
+			obuddy->oca = oca;
+			
+			// load the old buddy icon url from the icon 'checksum'
+			const gchar *buddy_icon_url = purple_buddy_icons_get_checksum_for_user(buddy);
+			if (buddy_icon_url != NULL)
+				obuddy->thumb_url = g_strdup(buddy_icon_url);
+			
+			buddy->proto_data = obuddy;			
+		}
+		if (!obuddy->thumb_url || !g_str_equal(obuddy->thumb_url, buddy_icon))
+		{
+			gchar *host, *path, *path2;
+			gchar *large_image_url;
+			
+			g_free(obuddy->thumb_url);
+			obuddy->thumb_url = g_strdup(buddy_icon);
+			large_image_url = purple_strreplace(buddy_icon, "/60x60/", "/256x256/");
+			
+			purple_url_parse(large_image_url, &host, NULL, &path, NULL, NULL);
+			g_free(large_image_url);
+			if (path[0] != '/')
+				path2 = g_strdup_printf("/%s", path);
+			else
+				path2 = g_strdup(path);
+			okc_post_or_get(oca, OKC_METHOD_GET, host, path2, NULL, okc_buddy_icon_cb, g_strdup(username), FALSE);
+			
+			g_free(host);
+			g_free(path);
+			g_free(path2);
+		}
 	}
 
 	purple_notify_user_info_add_section_break(user_info);
